[project]
name = "recipify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.14.2",
]


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # Example: errors, pyflakes, imports
ignore = ["E501"]          # Example: ignore line length

[tool.ruff.format]
quote-style = "double"
indent-style = "space"